Fixed Spacing Issues and random text
The JS for the cookies are  no longer at the bottom of the pages. And the spacing of the navbar is better when the window is shrunk.

--- a/src/CSS/MenuSelection.css
+++ b/src/CSS/MenuSelection.css
@@ -3,6 +3,10 @@
   margin: 15px;
 }
 
+.MenuBar a {
+  font-size: 20px;
+}
+
 .MenuBar div {
   justify-content: space-between;
 }
